added the code for the aggregate streams example